Oauth2Proxy/ingress.yaml
# this Example for expose Longhorn dashboard
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: ingress-longhorn 
  annotations: 
    kubernetes.io/ingress.class: nginx 
    nginx.ingress.kubernetes.io/auth-url: https://oauth.example.org/oauth2/auth 
    nginx.ingress.kubernetes.io/auth-signin: https://oauth.example.org/oauth2/start
spec: 
  rules: 
    - host: user1.example.org 
      http: 
        paths: 
        - pathType: ImplementationSpecific 
          path: / 
          backend: 
            service: 
              name: longhorn-frontend
              port: 
                number: 80
